tests/fixtures/fail/self_expression_outside_extend.sc
let main(): i32 = { Self { value: 42 } }
